deploy: 4cbaa1807f3f657d06c16af54c22758d2cde8d73

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
 <p>The content is modular, code‑first, and designed for easy reuse, enabling teams to discover, govern, monetize, validate, and automate data products using standardized, machine-readable metadata. Users are encouraged to contribute new scenarios or enhancements via GitHub issues.</p>
 
-<p><a href="https://github.com/Open-Data-Product-Initiative/odps-knowledge-base">Knowledge Base in Github</a>. </p>
+<p><a href="https://opendataproducts.org/howto/">Knowledge Base in Github</a>. </p>
 <h2 id='introduction'>Introduction</h2>
 <p>The Open Data Product Specification is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products. The work is based on existing standards (schema.org), best practices and emerging concepts like Data Mesh. The reasoning is that we reuse and proudly copy instead of reinventing the wheel. More detailed information of the origin can be found from the <a href="http://www.opendataproducts.org">Open Data Product Specification homepage</a>. </p>
 
