deploy: ebd02cc8555d93c7e29dcf906f3a6a53c4fd4bbc

--- a/index.html
+++ b/index.html
@@ -1662,13 +1662,13 @@ any industry specific needs. </p>
           <span class="pi">-</span> <span class="s">High amount of transactions</span>
           <span class="pi">-</span> <span class="s">Billed monthly</span>
         <span class="na">paymentGateway</span><span class="pi">:</span>
-          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/paymentGateways/default'</span>
+          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/product/paymentGateways/default'</span>
         <span class="na">dataQuality</span><span class="pi">:</span>
-          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/dataQuality/default'</span>
+          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/product/dataQuality/default'</span>
         <span class="na">SLA</span><span class="pi">:</span>
-          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/SLA/default'</span>
+          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/product/SLA/default'</span>
         <span class="na">access</span><span class="pi">:</span>
-          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/dataAccess/API'</span>
+          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/product/dataAccess/API'</span>
       <span class="pi">-</span> <span class="na">name</span><span class="pi">:</span> <span class="s">Premium MCP 1 month</span>
         <span class="na">priceCurrency</span><span class="pi">:</span> <span class="s">EUR</span>
         <span class="na">price</span><span class="pi">:</span> <span class="m">500</span>
@@ -1680,13 +1680,13 @@ any industry specific needs. </p>
           <span class="pi">-</span> <span class="s">High amount of transactions</span>
           <span class="pi">-</span> <span class="s">Billed monthly</span>
         <span class="na">paymentGateway</span><span class="pi">:</span>
-          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/paymentGateways/agent'</span>
+          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/product/paymentGateways/agent'</span>
         <span class="na">dataQuality</span><span class="pi">:</span>
-          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/dataQuality/premium'</span>
+          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/product/dataQuality/premium'</span>
         <span class="na">SLA</span><span class="pi">:</span>
-          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/SLA/premium'</span>
+          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/product/SLA/premium'</span>
         <span class="na">access</span><span class="pi">:</span>
-          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/dataAccess/agent'</span>
+          <span class="s">$ref</span><span class="pi">:</span> <span class="s1">'</span><span class="s">#/product/dataAccess/agent'</span>
 
   <span class="na">executable</span><span class="pi">:</span>
     <span class="pi">-</span> <span class="na">name</span><span class="pi">:</span> <span class="s">Premium subscription 1 year</span>
