deploy: 2c10ea3bbfe50ff5ce52c0dba6a3fd1bbcbfce16

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                     <a href="#specification-aims-and-aspects" class="toc-h2 toc-link" data-title="Specification aims and aspects">Specification aims and aspects</a>
                   </li>
                   <li>
-                    <a href="#document-structure" class="toc-h2 toc-link" data-title="Document structure">Document structure</a>
+                    <a href="#documentation-structure" class="toc-h2 toc-link" data-title="Documentation structure">Documentation structure</a>
                   </li>
               </ul>
           </li>
@@ -541,7 +541,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <p><img src="images/ODPS-design-a7522846.png" alt="odps-model" /></p>
 
 <p>If you see something missing, described inaccurately or plain wrong, or you want to comment the specification, <a href="https://github.com/Open-Data-Product-Initiative/rc4/issues">raise an issue in Github</a></p>
-<h2 id='document-structure'>Document structure</h2>
+<h2 id='documentation-structure'>Documentation structure</h2>
 <p><strong>LEFT COLUMN: Navigation</strong></p>
 
 <p>The left column is navigation which enables fluent and easy movement around the specification. </p>
