deploy: 2465112e96c33098c692ddc43455adb29b1d59bd

--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td><strong>REQUIRED</strong> The type of the product. Options are derived from examples and lists found from academic literature.</td>
 </tr>
 </tbody></table>
-
+<h2 id='optional-attributes-and-elements'>Optional attributes and elements</h2>
 <blockquote>
 <p>Example of details object usage:</p>
 </blockquote>
@@ -717,7 +717,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
       <span class="na">recommendedDataProducts</span><span class="pi">:</span>
       <span class="pi">-</span> <span class="s">https://marketplace.com/dataproduct.json</span>
       <span class="pi">-</span> <span class="s">https://marketplace.com/dataproduct-another.json</span>
-</code></pre></div><h2 id='optional-attributes-and-elements'>Optional attributes and elements</h2>
+</code></pre></div>
 <p>Additional details of the data product. </p>
 
 <table><thead>
