deploy: 144a8d09ac90aaab2b1ca43fb84539ee2e5d4a22

--- a/index.html
+++ b/index.html
@@ -715,8 +715,8 @@ Development of the specification is under the umbrella of the Linux Foundation. 
           <span class="na">useCaseDescription</span><span class="pi">:</span> <span class="s">Use case description how succesfull petstore chain was established in Abu Dhabi</span>
           <span class="na">useCaseURL</span><span class="pi">:</span> <span class="s">https://marketplace.com/usecase1</span>
       <span class="na">recommendedDataProducts</span><span class="pi">:</span>
-      <span class="pi">-</span> <span class="s">https://marketplace.com/dataproduct.json</span>
-      <span class="pi">-</span> <span class="s">https://marketplace.com/dataproduct-another.json</span>
+      <span class="pi">-</span> <span class="s">https://marketplace.com/dataproduct.yaml</span>
+      <span class="pi">-</span> <span class="s">https://marketplace.com/dataproduct-another.yaml</span>
 </code></pre></div>
 <p>Additional details of the data product. </p>
 
