deploy: c39c3d1c82f6fa71ab28646d5a58ee17ae856cb8

--- a/index.html
+++ b/index.html
@@ -3162,6 +3162,12 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
 <li>Toni Luhti</li>
 <li>Topi Santakivi</li>
 <li>Antti Loukiala</li>
+<li>Zaher Abou Shakra</li>
+<li>Manfred Sorg</li>
+<li>Jorge Alvarado</li>
+<li>Daniel Kocot</li>
+<li>Srujan Akula</li>
+<li>Ravi Kruger</li>
 </ul>
 
       </div>
