deploy: 0338989c0b12beef07cd85a555dc8a0e83ebbf2c

--- a/index.html
+++ b/index.html
@@ -1916,25 +1916,25 @@ any industry specific needs. </p>
 <td><strong>paymentGateway</strong></td>
 <td>reference</td>
 <td>path to paymentGateways</td>
-<td>Reference to an available payment gateway definition under #/paymentGateways/...</td>
+<td>Reference to an available payment gateway definition under #/product/paymentGateways/... More details in <a href="https://opendataproducts.org/howto/">Knowledge Base</a></td>
 </tr>
 <tr>
 <td><strong>dataQuality</strong></td>
 <td>reference</td>
 <td>path to dataQuality</td>
-<td>Reference to a defined data quality package from #/dataQuality/...</td>
+<td>Reference to a defined data quality package from #/product/dataQuality/... More details in <a href="https://opendataproducts.org/howto/">Knowledge Base</a></td>
 </tr>
 <tr>
 <td><strong>SLA</strong></td>
 <td>reference</td>
 <td>path to SLA</td>
-<td>Reference to a defined SLA specification under #/SLA/...</td>
+<td>Reference to a defined SLA specification under #/product/SLA/... More details in <a href="https://opendataproducts.org/howto/">Knowledge Base</a></td>
 </tr>
 <tr>
 <td><strong>access</strong></td>
 <td>reference</td>
 <td>path to dataAccess</td>
-<td>Reference to a data access method under #/dataAccess/...</td>
+<td>Reference to a data access method under #/product/dataAccess/... More details in <a href="https://opendataproducts.org/howto/">Knowledge Base</a></td>
 </tr>
 <tr>
 <td><strong>executable</strong></td>
