deploy: b52bba217ac28f484e011eedde115b2083199e17

--- a/index.html
+++ b/index.html
@@ -508,6 +508,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
 <ul>
 <li><a href="https://github.com/Open-Data-Product-Initiative/4rc/issues">Raise an issue in Github</a></li>
+<li><a href="https://discord.gg/7KfnFxAc">Join ODPS Discourse Server</a> </li>
 </ul>
 <h2 id='howto-odps-knowledge-base'>HowTo - ODPS Knowledge Base</h2>
 <p>The odps‑examples repository serves as a comprehensive knowledge base for using the Open Data Product Specification (ODPS), combining clear FAQs with real-world YAML examples to guide users through practical implementation. Each FAQ entry tackles a specific task—like defining metadata, setting pricing tiers, assigning SLAs, configuring data quality rules, managing access roles, or enabling AI/agent consumption—accompanied by executable YAML snippets and full .yml files. </p>
