--- a/index.html
+++ b/index.html
@@ -519,12 +519,21 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <h2 id='introduction'>Introduction</h2>
 <p>The Open Data Product Specification is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products. The work is based on existing standards (schema.org), best practices and emerging concepts like Data Mesh. The reasoning is that we reuse and proudly copy instead of reinventing the wheel. More detailed information of the origin can be found from the <a href="http://www.opendataproducts.org">Open Data Product Specification homepage</a>. </p>
 
-<p><strong>The ODPS 4.0 specification supports referencing mechanisms</strong> that improve modularity, reduce duplication, and ease governance. Users can reference internal components, such as SLA, dataQuality, dataAccess, and paymentGateways, from other parts of the product definition using JSON Reference syntax ($ref). In addition, any of these components can be defined and maintained in external YAML files and included via URL-based references. This makes it possible </p>
+<p><strong>The ODPS 4.0 specification supports referencing mechanisms</strong> that improve modularity, reduce duplication, and ease governance. Users can reference internal components, such as SLA, dataQuality, dataAccess, and paymentGateways, from other parts of the product definition using JSON Reference syntax ($ref). In addition, any of these components can be defined and maintained in external YAML files and included via URL-based references. This makes it possible: </p>
 
 <ul>
 <li>to reuse standardized SLA profiles, DQ rules, or access definitions across multiple data products, </li>
 <li>helping teams manage changes consistently, reduce errors, and </li>
 <li>align with enterprise-level governance practices.</li>
+</ul>
+
+<p>Benefits of Referencing:</p>
+
+<ul>
+<li>DRY Principle: Avoid repetition. Define once, reference many times.</li>
+<li>Clarity: Consumers of your data product can easily see which quality profile is associated with a particular service tier or access plan.</li>
+<li>Scalability: You can support multiple audiences or markets with varying quality expectations.</li>
+<li>Auditability: Clearly link machine-readable checks to business commitments.</li>
 </ul>
 
 <p>You can also reference <strong>Data Contract as a URL or define Data Contract as an inline element</strong> in ODPS. Both Data Contract Specification (DCS) and Open Data Contract Standard (ODCS) supported. </p>
