deploy: ed0fadf3fdcf83a2b98a9358b7f30b52c58fa7b9

--- a/index.html
+++ b/index.html
@@ -2593,7 +2593,7 @@ any industry specific needs. </p>
 <p>This component enables flexible monetization strategies, including differentiated billing models for human users vs. machine users, and support for both traditional and agent-native payment protocols.</p>
 
 <p><strong>Referencing Payment Gateways:</strong>
-Named gateway definitions (e.g., <code>default</code>, <code>Agent</code>) can be <strong>reused across pricing plans</strong> using <code>$ref</code>. This ensures consistent payment logic, minimizes duplication, and allows you to tie multiple plans to a single gateway configuration.</p>
+Named gateway definitions (e.g., <code>default</code>, <code>Agent</code>) can be <strong>reused across pricing plans</strong> using <code>$ref</code>. This ensures consistent payment logic, minimizes duplication, and allows you to tie multiple plans to a single gateway configuration. More details in the <a href="https://opendataproducts.org/howto/">Knowledge Base</a>.</p>
 
 <p><strong>Benefits of Referencing:</strong></p>
 
