--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             content="The Open Data Product Specification (Linux Foundation project) is a vendor-neutral, open-source machine-readable data product metadata model. It defines the objects and attributes as well as the structure of digital data products."
         >
 
-    <title>Open (source) Data Product Specification 4.0 RC Version | Linux Foundation</title>
+    <title>Open (source) Data Product Specification 4.0 Version | Linux Foundation</title>
 
 
     <style media="screen">
@@ -336,7 +336,7 @@
             <a href="#open-data-product-specification" class="toc-h1 toc-link" data-title="OPEN DATA PRODUCT SPECIFICATION">OPEN DATA PRODUCT SPECIFICATION</a>
               <ul class="toc-list-h2">
                   <li>
-                    <a href="#4-0-release-candidate-version" class="toc-h2 toc-link" data-title="4.0 Release Candidate Version">4.0 Release Candidate Version</a>
+                    <a href="#4-0-release-version" class="toc-h2 toc-link" data-title="4.0 Release Version">4.0 Release Version</a>
                   </li>
                   <li>
                     <a href="#introduction" class="toc-h2 toc-link" data-title="Introduction">Introduction</a>
@@ -477,18 +477,18 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <h1 id='open-data-product-specification'>OPEN DATA PRODUCT SPECIFICATION</h1><h2 id='4-0-release-candidate-version'>4.0 Release Candidate Version</h2>
+        <h1 id='open-data-product-specification'>OPEN DATA PRODUCT SPECIFICATION</h1><h2 id='4-0-release-version'>4.0 Release Version</h2>
 <p>The key words “MUST”, “MUST NOT”, “REQUIRED”, “SHALL”, “SHALL NOT”, “SHOULD”, “SHOULD NOT”, “RECOMMENDED”, “NOT RECOMMENDED”, “MAY”, and “OPTIONAL” in this document are to be interpreted as described in BCP 14 [RFC2119] [RFC8174] when, and only when, they appear in all capitals, as shown here.</p>
 
 <p>The specification is shared under <a href='https://www.apache.org/licenses/LICENSE-2.0'>Apache 2.0</a> license. 
 Development of the specification is under the umbrella of the Linux Foundation. </p>
 
-<p><strong>RELEASE CANDIDATE VERSION</strong></p>
+<p><strong>RELEASE VERSION</strong></p>
 
 <p><strong>Version source:</strong></p>
 
 <ul>
-<li><a href="https://github.com/Open-Data-Product-Initiative/4rc">https://github.com/Open-Data-Product-Initiative/4rc</a></li>
+<li><a href="https://github.com/Open-Data-Product-Initiative/v4.0">https://github.com/Open-Data-Product-Initiative/v4.0</a></li>
 </ul>
 
 <p><strong>ODPS YAML Schema:</strong></p>
@@ -566,7 +566,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 
 <p><img src="images/ODPS-design-a7522846.png" alt="odps-model" /></p>
 
-<p>If you see something missing, described inaccurately or plain wrong, or you want to comment the specification, <a href="https://github.com/Open-Data-Product-Initiative/rc4/issues">raise an issue in Github</a></p>
+<p>If you see something missing, described inaccurately or plain wrong, or you want to comment the specification, <a href="https://github.com/Open-Data-Product-Initiative/v4.0/issues">raise an issue in Github</a></p>
 <h2 id='documentation-structure'>Documentation structure</h2>
 <p><strong>LEFT COLUMN: Navigation</strong></p>
 
