deploy: 1bf421b47afe37ca766d12343056f7ce9a5175f1

--- a/index.html
+++ b/index.html
@@ -2430,7 +2430,7 @@ any industry specific needs. </p>
 
 <p>The <em>data holder</em> might not be the original IPR owner of the data used, but has rights operate with it. The contract or other agreement between Provider and possible data owner is not part of the standard as metadata or licence wise.</p>
 
-<p>If you see something missing, described inaccurately or plain wrong, or you want to comment the specification, <a href="https://github.com/Open-Data-Product-Initiative/dev/issues">raise an issue in Github</a></p>
+<p>If you see something missing, described inaccurately or plain wrong, or you want to comment the specification, <a href="https://github.com/Open-Data-Product-Initiative/v4.0/issues">raise an issue in Github</a></p>
 <h2 id='optional-attributes-and-elements'>Optional attributes and elements</h2>
 <blockquote>
 <p>Example of Holder component with some of the voluntary attributes:</p>
