deploy: 66b0630a22cd52fdd3d4be5ccc68022a22a4d38c

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <p><strong>Participate:</strong></p>
 
 <ul>
-<li><a href="https://github.com/Open-Data-Product-Initiative/4rc/issues">Raise an issue in Github</a></li>
+<li><a href="https://github.com/Open-Data-Product-Initiative/v4.0/issues">Raise an issue in Github</a></li>
 <li><a href="https://discord.gg/7KfnFxAc">Join ODPS Discord Server</a> </li>
 </ul>
 <h2 id='introduction'>Introduction</h2>
