deploy: 8598ef9dd7b5fcddb8a8c64d4681bf8fc4c947bf

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 <p>The specification is shared under <a href='https://www.apache.org/licenses/LICENSE-2.0'>Apache 2.0</a> license. 
 Development of the specification is under the umbrella of the Linux Foundation. </p>
 
-<p><strong>RELEASE VERSION</strong></p>
+<p><strong>Release date:</strong> 24th July 2025</p>
 
 <p><strong>Version source:</strong></p>
 
