deploy: 04d81f0a0f04d13e2fd924676f1f93ca8dfef469

--- a/index.html
+++ b/index.html
@@ -3192,7 +3192,14 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
 </tr>
 </tbody></table>
 <h1 id='editors-and-contributors'>Editors and contributors</h1>
-<p>This specification is openly developed and a lot of the work comes from community. We list all community contributors as a sign of appreciation. The editors (as initial creators of the the specification) are Jarkko Moilanen and Jussi Niilahti. Editors take the feedback and draft new candidate releases, which may become the versions of the specification. </p>
+<p>This specification is openly developed and a lot of the work comes from community. We list all community contributors as a sign of appreciation. Maintainers process the feedback and draft new candidate releases, which may become the versions of the specification. </p>
+
+<p><strong>Maintainers:</strong></p>
+
+<ul>
+<li><a href="https://www.linkedin.com/in/jarkkomoilanen/">Jarkko Moilanen</a></li>
+<li><a href="https://www.linkedin.com/in/manfred-sorg/">Manfred Sorg</a></li>
+</ul>
 <h2 id='list-of-community-contributors'>List of community contributors</h2>
 <p>The work around the specification would not be possible without enormous help from the community. Here&#39;s list of contributors so far. </p>
 
