deploy: 377396853ff37a3842a1f63db2f4aca76b9386d4

--- a/index.html
+++ b/index.html
@@ -1191,7 +1191,7 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td><strong>default</strong></td>
 <td>object</td>
 <td>-</td>
-<td>This object must always be present and named exactly <code>default</code> if SLA object is used. It acts as the fallback or baseline SLA profile. <br/><br/>Users are free to define additional named profiles such as <code>premium</code>, <code>gold</code>, etc., in parallel to the default. <br/><br/>In the example above, both <code>default</code> and <code>premium</code> profiles are included. These variants can be referenced from pricing plans or other objects. <br/><br/><strong>Example reference usage:</strong> <br/> <code>SLA: $ref: &#39;#/Product/SLA/default&#39;</code></td>
+<td>This object must always be present and named exactly <code>default</code> if SLA object is used. It acts as the fallback or baseline SLA profile. <br/><br/>Users are free to define additional named profiles such as <code>premium</code>, <code>gold</code>, etc., in parallel to the default. <br/><br/>In the example above, both <code>default</code> and <code>premium</code> profiles are included. These variants can be referenced from pricing plans or other objects. <br/><br/><strong>Example reference usage:</strong> <br/> <code>SLA: $ref: &#39;#/product/SLA/default&#39;</code></td>
 </tr>
 <tr>
 <td><strong>dimensions</strong></td>
@@ -1292,6 +1292,8 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 </tbody></table>
 
 <p>If you see something missing, described inaccurately or plain wrong, or you want to comment the specification, <a href="https://github.com/Open-Data-Product-Initiative/v4.0/issues">raise an issue in Github</a></p>
+
+<p>Or join the <a href="https://discord.gg/7KfnFxAc">ODPS Discord</a> to discuss the ideas and your needs! </p>
 <h1 id='data-quality'>Data Quality</h1>
 <blockquote>
 <p>Template structure of Data Quality array component:</p>
