deploy: 5f03c8e6149d426fbe4ad748fe0fbc37f9c71a67

--- a/index.html
+++ b/index.html
@@ -1603,6 +1603,8 @@ any industry specific needs. </p>
 </tbody></table>
 
 <p>If you see something missing, described inaccurately or plain wrong, or you want to comment the specification, <a href="https://github.com/Open-Data-Product-Initiative/v4.0/issues">raise an issue in Github</a></p>
+
+<p>Or join the <a href="https://discord.gg/7KfnFxAc">ODPS Discord</a> to discuss the ideas and your needs! </p>
 <h1 id='data-pricing-plans'>Data Pricing Plans</h1>
 <blockquote>
 <p>Template structure of Data Pricing Plans array component:</p>
