deploy: 9b3d00048217f6cfbe653c2e0b552d8d802eff86

--- a/index.html
+++ b/index.html
@@ -2028,6 +2028,8 @@ any industry specific needs. </p>
 </tbody></table>
 
 <p>If you see something missing, described inaccurately or plain wrong, or you want to comment the specification, <a href="https://github.com/Open-Data-Product-Initiative/v4.0/issues">raise an issue in Github</a></p>
+
+<p>Join the <a href="https://discord.gg/7KfnFxAc">ODPS Discord</a> to discuss the ideas and your needs! </p>
 <h1 id='data-licensing'>Data Licensing</h1>
 <p>Data product licensing is essential for ensuring legal compliance, protecting intellectual property rights, enabling monetization and commercialization, facilitating control and governance, managing liability and indemnification, promoting standardization and interoperability, and fostering transparency and trust in data exchange and collaboration. By establishing clear and enforceable licensing agreements, data producers and consumers can effectively leverage data assets while minimizing legal risks and maximizing the value of data products.</p>
 
