deploy: b995a14e206886fa11ac42c88e86e77a0c2eefd5

--- a/index.html
+++ b/index.html
@@ -2758,6 +2758,8 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
 
 <p>We encourage you to let us know of useful extensions so that we can consider those in the future releases, <a href="https://github.com/Open-Data-Product-Initiative/v4.0/issues">raise an issue in Github</a></p>
 
+<p>Join the <a href="https://discord.gg/7KfnFxAc">ODPS Discord</a> to discuss the ideas and your needs! </p>
+
 <blockquote>
 <p>Example of extension usage:</p>
 </blockquote>
