deploy: 6e909fcbed2945ce4654e42cf68a5957d9f1bdb1

--- a/index.html
+++ b/index.html
@@ -952,6 +952,8 @@ Development of the specification is under the umbrella of the Linux Foundation. 
 <td>Points to the contract content, local file or online. You can use this or then the other above described approaches to define elements of the contract.</td>
 </tr>
 </tbody></table>
+
+<p>Bring your ideas, questions, and use cases — <a href="https://discord.gg/7KfnFxAc">join the ODPS Discord</a> and get involved!</p>
 <h1 id='data-sla'>Data SLA</h1>
 <blockquote>
 <p>Template structure of SLA array component:</p>
