deploy: 2c920aa2b2905c64faa458a31fab61d86d9d77aa

--- a/index.html
+++ b/index.html
@@ -3202,7 +3202,7 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
 <li>CI/CD job that publishes selected products to a data portal when main branch updates</li>
 </ul>
 <h2 id='use-case-in-government-or-enterprise'>Use Case in Government or Enterprise</h2>
-<p>Imagine the Abu Dhabi Open Data Platform stores its official ODPS product definitions in a public GitHub repo. Each department can:</p>
+<p>Imagine a Platform storing its official ODPS product definitions in a public GitHub repo. Each department can:</p>
 
 <ul>
 <li>Maintain their own odps/*.yaml files</li>
