--- a/index.html
+++ b/index.html
@@ -3229,7 +3229,7 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
 </tr>
 </thead><tbody>
 <tr>
-<td><strong>catalogVersion</strong></td>
+<td><strong>version</strong></td>
 <td>string</td>
 <td>e.g., <code>1.0</code></td>
 <td>Version of the catalog schema</td>
@@ -3299,12 +3299,6 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
 <td>Metadata about the organization maintaining the catalog</td>
 </tr>
 <tr>
-<td><strong>name</strong></td>
-<td>string</td>
-<td>-</td>
-<td>Name of the catalog maintainer organization</td>
-</tr>
-<tr>
 <td><strong>url</strong></td>
 <td>string (URI)</td>
 <td>-</td>
@@ -3323,10 +3317,22 @@ Whenever the <code>paymentGateways</code> object is used, a gateway named <code>
 <td>Human-readable explanation of the data product</td>
 </tr>
 <tr>
-<td><strong>category</strong></td>
+<td><strong>categories</strong></td>
 <td>string</td>
 <td>e.g., <code>transport</code>, <code>environment</code></td>
 <td>A thematic category for filtering/grouping</td>
+</tr>
+<tr>
+<td><strong>created</strong></td>
+<td>string (date)</td>
+<td>ISO 8601</td>
+<td>Timestamp or date when the product was generated</td>
+</tr>
+<tr>
+<td><strong>updated</strong></td>
+<td>string (date)</td>
+<td>ISO 8601</td>
+<td>Timestamp or date when the product was last updated</td>
 </tr>
 </tbody></table>
 
